# LLLMao

./: .gitignore  LICENSE  README.md  commandstorun.txt  nextphase.txt  phase10.txt  phase9.txt
.github/: FUNDING.yml
backend/: README.md  requirements.txt  test_upload.py
backend/app/: __init__.py  config.py  main.py  runtime_paths.py
backend/app/audio/: cleanup.py  stt.py  tts.py  utils.py
backend/app/database/: init_db.py  session.py
backend/app/developer_tools/: __init__.py  editor.py  security.py
backend/app/memory/: __init__.py
backend/app/models/: __init__.py  chat.py  developer_tools.py  memory.py  multimodal.py  rag.py  workspace.py
backend/app/multimodal/: __init__.py
backend/database/: workspace.sqlite3
database/: README.md
deployment/: README.md
deployment/appimage/: README.md
deployment/assets/: com.lllmao.desktop.desktop  lllmao.desktop
deployment/deb/: README.md  lllmao.env
deployment/release/: manifest.json
deployment/scripts/: build-appimage.sh  build-deb.sh  build-frontend.sh  build-snap.sh  release-linux.sh  start-lllmao.sh  validate-runtime.sh
deployment/snap/: README.md  snapcraft.yaml
docs/: architecture.md  packaging.md
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
frontend/src/: main.tsx  styles.css
frontend/src-tauri/: tauri.conf.json
images/: 82ae5c7c-1150-443a-8f49-f2aed7156df8.upload
snap/: snapcraft.yaml
tauri/: Cargo.toml  package.json  tauri.conf.json
tauri/src/: main.rs
wiki/: Architecture-Overview.md  FAQ.md  Home.md
(+131 files in other folders)
