[package]
name = "lllmao"
version = "0.1.0"
description = "Linux-native local Ollama workspace"
authors = ["LLLMao contributors"]
edition = "2021"
license-file = "../LICENSE"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.2", features = [] }
tauri-plugin-shell = "2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
custom-protocol = ["tauri/custom-protocol"]
